@@ -296,6 +296,8 @@ code {
 
 <p><strong>resource_round_method</strong> | <code>[none, round, floor, ceil]</code> | Rounds the numbers for most combat events that affect HP/MP. For example: damage taken, HP healed, MP consumed. Defaults to 'round'.</p>
 
+<p><strong>offscreen_enemy_encounters</strong> | <code>bool</code> | If true, enemies can enter combat even if they are off-screen. Defaults to false.</p>
+
 <hr />
 
 <h4>EngineSettings: Equip flags</h4>
